Fix tooltip z-index

--- a/src/css/components/app-modal.less
+++ b/src/css/components/app-modal.less
@@ -54,7 +54,7 @@
       height: 100%;
 
       .tooltip-container {
-        z-index: 1;
+        z-index: 2;
         right: @base-spacing-unit*2;
         top: @base-spacing-unit*2;
         position: absolute;
